--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "katsana-overwatch",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "author": "KATSANA Developers",
   "description": "Live Feeds Services for KATSANA",
   "homepage": "https://github.com/katsana",
   "main": "dist/overwatch.js",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "socket.io-client": "^1.4.6"
+    "socket.io-client": "^2.5.0"
   },
   "devDependencies": {
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.5.0",
     "javie": "^2.1.1",
     "rollup": "^0.31.0",
